Fixet bug med pdf-visning i IE. position absolute og z-index fungerer ikke med adobe

--- a/src/main/resources/no/nav/sbl/dialogarena/reactkomponenter/saksoversikt/saksoversikt-module.less
+++ b/src/main/resources/no/nav/sbl/dialogarena/reactkomponenter/saksoversikt/saksoversikt-module.less
@@ -224,10 +224,10 @@
     background-color: #EFEFEF;
     padding: 1rem 3rem 1rem 3rem;
     margin: 0;
-    position: absolute;
+    position: relative;
     left: 0;
     right: 17px;
-    z-index: 1005;
+    z-index: 99;
     box-shadow: -1px 1px 5px 0px #b7b1a9;
   }
   .kulemeny {
@@ -401,7 +401,7 @@
   position: absolute;
   top: 135px;
   left: 75px;
-  z-index: 1000;
+  z-index: 50;
   width: 80%;
 }
 
